--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#129351; FreeZeV2.1 is the "overall best method" of both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
+                  &#129351; FreeZeV2.1 is the "overall best method" in both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
                 </p>
               </td>
             </tr>
@@ -150,19 +150,6 @@
 
           </tbody>
         </table>
-
-        <!-- <p class="fs-5">
-          &#128227; On November 22nd, I will give a talk on "Object 6D pose estimation in the foundation models era" at the <a href="https://www.disi.unitn.it/#/" style="color:black">University of Trento</a>.
-          Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
-        </p>
-
-        <p class="fs-5">
-          &#127881; (Nov. 2024) One paper accepted at WACV 2025! In this work, we segment 3D object's parts using 2D vision foundation models without requiring any training. Check out the <a href="https://3d-cops.github.io/" style="color:black">project page</a>.
-        </p>
-
-        <p class="fs-5">
-          &#129351; (Oct. 2024) FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the BOP Challenge 2024.
-        </p> -->
 
         <hr class="col-1 my-4">
 
