Fixed the layout

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <div class="container my-5">
-      <div class="col-lg-8 px-0">
+      <!-- <div class="col-lg-8 px-0"> -->
 
 
 
@@ -87,7 +87,8 @@
 
 
 
-        <hr class="col-1 my-4">
+        <!-- <hr class="col-1 my-4"> -->
+        <div class="col-xs-12" style="height:50px;"></div>
 
         <h3>News</h3>
 
@@ -151,7 +152,8 @@
           </tbody>
         </table>
 
-        <hr class="col-1 my-4">
+        <!-- <hr class="col-1 my-4"> -->
+        <div class="col-xs-12" style="height:50px;"></div>
 
         <h3>Contacts</h3>
         <address>
@@ -163,7 +165,7 @@
             Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
         </address>
 
-      </div>
+      <!-- </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
