--- a/publications.html
+++ b/publications.html
@@ -112,6 +112,9 @@
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://bop.felk.cvut.cz/leaderboards/pose-estimation-unseen-bop23/bop-classic-core/">
             <i class="fa fa-trophy"></i> BOP leaderboard
           </a>
+          <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://www.youtube.com/watch?v=Mgmt93kXK_4&t=1s&ab_channel=KevinWood%7CRobotics%26AI">
+            <i class="fa fa-film"></i> Media coverage
+          </a>
           <!-- <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://github.com/andreacaraffa/freeze"><i class="fa fa-github"></i> code</a> -->
           <p></p>
         </li>
