--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
     <div class="container my-5">
       <!-- <div class="col-lg-8 px-0"> -->
+      <!-- <div class="w-50 p-3"> -->
 
 
 
@@ -96,9 +97,61 @@
           <tbody>
 
             <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Jun. 10th, 2025
+                </p>
+              </td>
               <td>
                 <p class="fs-5">
-                  Dec. 2024
+                  &#129352; Fun3DU is the "second best method" in task-driven affordance grounding at the <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6121" style="color:black">SceneFun3D Challenge 2025</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Jun., 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129299; I serve as Area Chair for <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  May 12th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128591; Honored to be recognized as <a href="https://cvpr.thecvf.com/Conferences/2025/ProgramCommittee#all-outstanding-reviewer" style="color:black">Outstanding Reviewer</a> at CVPR 2025.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Apr. 5th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; Fun3DU has been selected as an <a href="https://cvpr.thecvf.com/virtual/2025/poster/33812" style="color:black">highlight poster</a> at CVPR 2025.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Dec., 2024
                 </p>
               </td>
               <td>
@@ -108,8 +161,8 @@
               </td>
             </tr>
 
-            <tr>
-              <td>
+            <!-- <tr>
+              <td style="width:20%">
                 <p class="fs-5">
                   Nov. 22, 2024
                 </p>
@@ -120,10 +173,10 @@
                   Thanks to <a href="https://mancinimassimiliano.github.io/" style="color:black">Massimiliano Mancini</a> for inviting me.
                 </p>
               </td>
-            </tr>
+            </tr> -->
 
-            <tr>
-              <td>
+            <!-- <tr>
+              <td style="width:20%">
                 <p class="fs-5">
                   Nov. 2024
                 </p>
@@ -134,10 +187,10 @@
                   Check out the <a href="https://3d-cops.github.io/" style="color:black">project page</a>.
                 </p>
               </td>
-            </tr>
+            </tr> -->
 
-            <tr>
-              <td>
+            <!-- <tr>
+              <td style="width:20%">
                 <p class="fs-5">
                   Oct. 2024
                 </p>
@@ -147,7 +200,7 @@
                   &#129351; FreeZeV2 is the "early-bird winner" in both 6D localization and 6D detection tasks at the <a href="https://bop.felk.cvut.cz/challenges/" style="color:black">BOP Challenge 2024</a>.
                 </p>
               </td>
-            </tr>
+            </tr> -->
 
           </tbody>
         </table>
@@ -165,7 +218,7 @@
             Mail: <img style="vertical-align:top" src="./data/mail_fbk.png" class="figure-img img-fluid rounded" alt="FBK mail" width="162" height="22"><br>
         </address>
 
-      <!-- </div> -->
+      <!-- </div> Constraint the page width -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
