--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,35 @@
       <ul class="list-group list-group-flush">
         <h2 style="color:#899499">2025</h2>
 
+          <!-- CVPR 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <figure class="figure">
+              <img src="data/thumb/2025_CVPR_Fun3DU.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure>
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">Functionality understanding and segmentation in 3D scenes</h5>
+            </div>
+            <p class="mb-1">Jaime Corsetti, Francesco Giuliari, Alice Fasoli, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+            <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2025</p>
+            <p class="mb-1" style="color:#899499">
+              &#128227; Invited for presentation at the the 4th OpenSUN3D workshop, held in conjuction with CVPR 2025
+            </p>
+            <p class="mb-1" style="color:#899499">
+              &#129352; Fun3DU achieved 2nd place in task-driven affordance grounding at the SceneFun3D Challenge 2025
+            </p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://tev-fbk.github.io/fun3du/">
+              <i class="fa fa-globe"></i> webpage
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2411.16310">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6121">
+              <i class="fa fa-trophy"></i> SceneFun3D leaderboard
+            </a>
+            <p></p>
+          </a>
+          </li>
+
           <!-- WACV 2025 -->
           <li class="list-group-item list-group-item-action">
             <figure class="figure">
