--- a/index.html
+++ b/index.html
@@ -99,6 +99,30 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Jun. 16th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128227; Two papers accepted in the same day! dGeDi will be presented at IROS 2025 and ViMAT at ICIAP 2025.
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
+                  Jun. 11th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#128227; Two fresh new technical reports! Check out CHIP and FreeZeV2.
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Jun. 10th, 2025
                 </p>
               </td>
