--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#128227; Two papers accepted in the same day! dGeDi will be presented at IROS 2025 and ViMAT at ICIAP 2025.
+                  &#128227; Two papers accepted on the same day!
+                  <a href="https://tev-fbk.github.io/dGeDi/" style="color:black">dGeDi</a> will be presented at IROS 2025
+                  and ViMAT at ICIAP 2025.
               </td>
             </tr>
 
@@ -116,7 +118,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#128227; Two fresh new technical reports! Check out CHIP and FreeZeV2.
+                  &#128227; Two brand-new technical reports are out! Check out <a href="https://arxiv.org/abs/2506.09699" style="color:black">CHIP</a> and <a href="https://arxiv.org/abs/2506.09784" style="color:black">FreeZeV2</a>.
               </td>
             </tr>
 
