--- a/index.html
+++ b/index.html
@@ -104,9 +104,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#128227; Two papers accepted on the same day!
-                  <a href="https://tev-fbk.github.io/dGeDi/" style="color:black">dGeDi</a> will be presented at IROS 2025
-                  and ViMAT at ICIAP 2025.
+                  &#128227; Two papers accepted on the same day! <a href="https://tev-fbk.github.io/dGeDi/" style="color:black">dGeDi</a> will be presented at <a href="https://www.iros25.org/" style="color:black">IROS 2025</a> and <a href="https://tev-fbk.github.io/ViMAT/" style="color:black">ViMAT</a> at <a href="https://sites.google.com/view/iciap25" style="color:black">ICIAP 2025</a>.
               </td>
             </tr>
 
@@ -130,7 +128,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#129352; Fun3DU is the "second best method" in task-driven affordance grounding at the <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6121" style="color:black">SceneFun3D Challenge 2025</a>.
+                  &#129352; <a href="https://jcorsetti.github.io/fun3du/" style="color:black">Fun3DU</a> is the "second best method" in task-driven affordance grounding at the <a href="https://eval.ai/web/challenges/challenge-page/2466/leaderboard/6121" style="color:black">SceneFun3D Challenge 2025</a>.
                 </p>
               </td>
             </tr>
@@ -169,7 +167,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#127881; Fun3DU has been selected as an <a href="https://cvpr.thecvf.com/virtual/2025/poster/33812" style="color:black">highlight poster</a> at CVPR 2025.
+                  &#127881; <a href="https://jcorsetti.github.io/fun3du/" style="color:black">Fun3DU</a> has been selected as an <a href="https://cvpr.thecvf.com/virtual/2025/poster/33812" style="color:black">highlight poster</a> at CVPR 2025.
                 </p>
               </td>
             </tr>
