--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,46 @@
       <ul class="list-group list-group-flush">
         <h2 style="color:#899499">2025</h2>
 
+          <!-- ICIAP 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <figure class="figure">
+              <img src="data/thumb/2025_ICIAP_ViMAT.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure>
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">AI-driven visual monitoring of industrial assembly tasks</h5>
+            </div>
+            <p class="mb-1">Mattia Nardon, Stefano Messelodi, Antonio Granata, Fabio Poiesi, Alberto Danese, <strong>Davide Boscaini</strong></p>
+            <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2025</p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://tev-fbk.github.io/ViMAT/">
+              <i class="fa fa-globe"></i> webpage
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2506.15285">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <p></p>
+          </a>
+          </li>
+
+          <!-- IROS 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <figure class="figure">
+              <img src="data/thumb/2025_IROS_dGeDi.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure>
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">Distilling 3D distinctive local descriptors for 6D pose estimation</h5>
+            </div>
+            <p class="mb-1">Amir Hamza, Andrea Caraffa, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
+            <p class="mb-1"><i>International Conference on Intelligent Robots and Systems (IROS)</i>, 2025</p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://tev-fbk.github.io/dGeDi/">
+              <i class="fa fa-globe"></i> webpage
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2503.15106v2">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <p></p>
+          </a>
+          </li>
+
           <!-- CVPR 2025 -->
           <li class="list-group-item list-group-item-action">
             <figure class="figure">
