Added acceptance rate

--- a/publications.html
+++ b/publications.html
@@ -106,7 +106,8 @@
               <h5 class="mb-1">Functionality understanding and segmentation in 3D scenes</h5>
             </div>
             <p class="mb-1">Jaime Corsetti, Francesco Giuliari, Alice Fasoli, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
-            <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2025</p>
+            <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2025
+              &mdash; <font color="#a21a2a">Highlight poster (less than 3% of accepted papers)</font></p>
             <p class="mb-1" style="color:#899499">
               &#128227; Invited for presentation at the the 4th OpenSUN3D workshop, held in conjuction with CVPR 2025
             </p>
@@ -198,7 +199,7 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
-            &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font>
+            &mdash; <font color="#a21a2a">Highlight poster (2.8% of accepted papers)</font>
           </p>
           <p class="mb-1" style="color:#899499">
             &#128293; An enhanced version of this work, Horyon, is now available as technical report at 
