Added constraint on page width

--- a/publications.html
+++ b/publications.html
@@ -33,7 +33,7 @@
       </div>
     </nav>
 
-    <div class="container my-5">
+    <div class="container my-5" style="max-width:1000px">
 
 
       <h2>Bibliometrics</h2>
