--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </div>
     </nav>
 
-    <div class="container my-5">
+    <div class="container my-5" style="max-width:1000px">
       <!-- <div class="col-lg-8 px-0"> -->
       <!-- <div class="w-50 p-3"> -->
 
