--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Jul. 25th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; <a href="https://arxiv.org/abs/2506.09699" style="color:black">CHIP</a> got accepted at <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>! Are you working on object 6D pose estimation in industrial environments? Don't miss our new dataset, specifically designed for challenging real-world settings.
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Jun. 16th, 2025
                 </p>
               </td>
