--- a/index.html
+++ b/index.html
@@ -99,6 +99,18 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Jul. 29th, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#127881; I gave a talk about "3D object understanding on the shoulders of 2D foundation models" at the Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for inviting me.
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Jul. 25th, 2025
                 </p>
               </td>
