Added talk news

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#127881; I gave a talk about "3D object understanding on the shoulders of 2D foundation models" at the Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for inviting me.
+                  &#129299; I gave a talk on "3D object understanding on the shoulders of 2D foundation models" at Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for inviting me.
               </td>
             </tr>
 
