--- a/index.html
+++ b/index.html
@@ -99,12 +99,26 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Aug., 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  &#129299; I serve as Reviewer for <a href="https://wacv.thecvf.com/" style="color:black">WACV 2026</a>.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Jul. 29th, 2025
                 </p>
               </td>
               <td>
                 <p class="fs-5">
-                  &#129299; I gave a talk on "3D object understanding on the shoulders of 2D foundation models" at Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for inviting me.
+                  &#129299; I gave a talk on "3D object understanding on the shoulders of 2D foundation models" at Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for the invitation.
+                </p>
               </td>
             </tr>
 
@@ -117,6 +131,7 @@
               <td>
                 <p class="fs-5">
                   &#127881; <a href="https://arxiv.org/abs/2506.09699" style="color:black">CHIP</a> got accepted at <a href="https://bmvc2025.bmva.org/" style="color:black">BMVC 2025</a>! Are you working on object 6D pose estimation in industrial environments? Don't miss our new dataset, specifically designed for challenging real-world settings.
+                </p>
               </td>
             </tr>
 
@@ -129,6 +144,7 @@
               <td>
                 <p class="fs-5">
                   &#128227; Two papers accepted on the same day! <a href="https://tev-fbk.github.io/dGeDi/" style="color:black">dGeDi</a> will be presented at <a href="https://www.iros25.org/" style="color:black">IROS 2025</a> and <a href="https://tev-fbk.github.io/ViMAT/" style="color:black">ViMAT</a> at <a href="https://sites.google.com/view/iciap25" style="color:black">ICIAP 2025</a>.
+                </p>
               </td>
             </tr>
 
@@ -141,6 +157,7 @@
               <td>
                 <p class="fs-5">
                   &#128227; Two brand-new technical reports are out! Check out <a href="https://arxiv.org/abs/2506.09699" style="color:black">CHIP</a> and <a href="https://arxiv.org/abs/2506.09784" style="color:black">FreeZeV2</a>.
+                </p>
               </td>
             </tr>
 
