--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  &#129299; I gave a talk on "3D object understanding on the shoulders of 2D foundation models" at Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for the invitation.
+                  🧑🏻‍🏫 I gave a talk on "3D object understanding on the shoulders of 2D foundation models" at Shandong University, China. Thanks to <a href="https://fabiopoiesi.github.io/" style="color:black">Fabio Poiesi</a> for the invitation.
                 </p>
               </td>
             </tr>
