--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,25 @@
       <ul class="list-group list-group-flush">
         <h2 style="color:#899499">2025</h2>
 
+          <!-- BMVC 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <figure class="figure">
+              <img src="data/thumb/2025_BMVC_CHIP.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure>
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">CHIP: A multi-sensor dataset for 6D pose estimation of chairs in industrial settings</h5>
+            </div>
+            <p class="mb-1">Mattia Nardon, Mikel Mujika, Ander González, Daniel Sedano, Josep Rueda, Ana P. Caro, Andrea Caraffa, Fabio Poiesi, Paul I. Chippendale, <strong>Davide Boscaini</strong></p>
+            <p class="mb-1"><i>British Machine Vision Conference (BMVC)</i>, 2025</p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://tev-fbk.github.io/CHIP/">
+              <i class="fa fa-globe"></i> webpage
+            </a>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2506.09699">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <p></p>
+          </li>
+
           <!-- ICIAP 2025 -->
           <li class="list-group-item list-group-item-action">
             <figure class="figure">
@@ -74,7 +93,6 @@
               <i class="ai ai-arxiv ai-1x"></i> arxiv
             </a>
             <p></p>
-          </a>
           </li>
 
           <!-- IROS 2025 -->
@@ -94,7 +112,6 @@
               <i class="ai ai-arxiv ai-1x"></i> arxiv
             </a>
             <p></p>
-          </a>
           </li>
 
           <!-- CVPR 2025 -->
@@ -124,7 +141,6 @@
               <i class="fa fa-trophy"></i> SceneFun3D leaderboard
             </a>
             <p></p>
-          </a>
           </li>
 
           <!-- WACV 2025 -->
