--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Sep. 15-19, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  🇮🇹 I had a great experience attending <a href="https://sites.google.com/view/iciap25" style="color:black">ICIAP 2025</a> in Rome, Italy. It was inspiring to connect with experts and learn about the latest advances in computer vision.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Aug., 2025
                 </p>
               </td>
