Updated news and publications

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  Nov. 13, 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  🎉 I obtained the "Abilitazione Scientifica Nazionale" as Associate Professor in the "01/B1 Informatics" sector.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Sep. 15-19, 2025
                 </p>
               </td>
