--- a/publications.html
+++ b/publications.html
@@ -57,6 +57,24 @@
       <ul class="list-group list-group-flush">
         <h2 style="color:#899499">2025</h2>
 
+          <!-- TPAMI 2025 -->
+          <li class="list-group-item list-group-item-action">
+            <!-- <figure class="figure">
+              <img src="data/thumb/2025_TPAMI_Horyon.png" class="figure-img img-fluid border rounded-0" alt="Paper thumbnail" style="min-height:90px; max-height: 120px">
+            </figure> -->
+            <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
+              <h5 class="mb-1">High-resolution open-vocabulary object 6D pose estimation</h5>
+            </div>
+            <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Francesco Giuliari, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
+            <p class="mb-1"><i>Transaction on Patter Analysis and Machine Intelligence (TPAMI)</i>, 2025
+              &mdash; <font color="#a21a2a">Impact factor 18.6</font>
+            </p>
+            <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2406.16384">
+              <i class="ai ai-arxiv ai-1x"></i> arxiv
+            </a>
+            <p></p>
+          </li>
+
           <!-- BMVC 2025 -->
           <li class="list-group-item list-group-item-action">
             <figure class="figure">
@@ -124,7 +142,7 @@
             </div>
             <p class="mb-1">Jaime Corsetti, Francesco Giuliari, Alice Fasoli, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
             <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2025
-              &mdash; <font color="#a21a2a">Highlight poster (less than 3% of accepted papers)</font></p>
+              &mdash; <font color="#a21a2a">Highlight poster (~3% acceptance rate)</font></p>
             <p class="mb-1" style="color:#899499">
               &#128227; Invited for presentation at the the 4th OpenSUN3D workshop, held in conjuction with CVPR 2025
             </p>
@@ -215,12 +233,12 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
-            &mdash; <font color="#a21a2a">Highlight poster (2.8% of accepted papers)</font>
+            &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font>
           </p>
-          <p class="mb-1" style="color:#899499">
+          <!-- <p class="mb-1" style="color:#899499">
             &#128293; An enhanced version of this work, Horyon, is now available as technical report at 
             <a href="https://arxiv.org/abs/2406.16384" style="color:#899499">https://arxiv.org/abs/2406.16384</a>
-          </p>
+          </p> -->
           <p class="mb-1" style="color:#899499">
             &#128269; We introduce the new setting of open-vocabulary object 6D pose estimation,
             in which a textual prompt is used to specify the object of interest,
@@ -478,7 +496,7 @@
           <div class="d-flex w-100 justify-content-between" style="margin-top:-10px">
             <h5 class="mb-1">Tractogram filtering of anatomically non-plausible fibers with Geometric Deep Learning</h5>
           </div>
-          <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, E. Olivetti, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
+          <p class="mb-1">Pietro Astolfi, Ruben Verhagen, Laurent Petit, Emanuele Olivetti, Jonathan Masci, <strong>Davide Boscaini</strong>, Paolo Avesani</p>
           <p class="mb-1"><i>International Conference on Medical Image Computing and Computer Assisted Intervention (MICCAI)</i>, 2020
             &mdash; <font color="#a21a2a">First Geometric Deep Learning application to NeuroImaging tasks</font></p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2003.11013">
@@ -497,7 +515,8 @@
           </div>
           <p class="mb-1">Antonio Alliegro, <strong>Davide Boscaini</strong>, Tatiana Tommasi</p>
           <p class="mb-1"><i>Multimodal Learning and Applications Workshop (MULA)</i>, 2020
-            &mdash; <font color="#a21a2a">Held in conjunction with ECCV 2020</font></p>
+            &mdash; <font color="#a21a2a">Held in conjunction with ECCV 2020</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://link.springer.com/chapter/10.1007/978-3-030-66415-2_48">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
           </a>
@@ -514,7 +533,8 @@
           </div>
           <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà, <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
           <p class="mb-1"><i>Nature Methods</i>, 2020
-            &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font></p>
+            &mdash; <font color="#a21a2a">Advertised on the February 2020 cover</font>
+          </p>
           <p></p>
         </li>
 
@@ -528,7 +548,8 @@
           </div>
           <p class="mb-1">Pablo Gainza, Freyr Sverrisson, Federico Monti, Emanuele Rodolà, <strong>Davide Boscaini</strong>, Michael M. Bronstein, Bruno E. Correia</p>
           <p class="mb-1"><i>NeurIPS Workshop on Graph Representation Learning</i>, 2019
-            &mdash; <font color="#a21a2a">Held in conjunction with NeurIPS 2019</font></p>
+            &mdash; <font color="#a21a2a">Held in conjunction with NeurIPS 2019</font>
+          </p>
           <p></p>
         </li>
 
@@ -542,7 +563,8 @@
           </div>
           <p class="mb-1">Levi O. Vasconcelos, Massimiliano Mancini, <strong>Davide Boscaini</strong>, Barbara Caputo, Elisa Ricci</p>
           <p class="mb-1"><i>International Conference on 3D Vision (3DV)</i>, 2019
-              &mdash; <font color="#a21a2a">Oral presentation</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation</font>
+          </p>
           <p></p>
         </li>
 
@@ -556,7 +578,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Fabio Poiesi</p>
           <p class="mb-1"><i>International Conference on Image Analysis and Processing (ICIAP)</i>, 2019
-            &mdash; <font color="#a21a2a">Spotlight presentation</font></p>
+            &mdash; <font color="#a21a2a">Spotlight presentation</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://arxiv.org/abs/2002.00397">
             <i class="ai ai-arxiv ai-1x"></i>&nbsp;&nbsp;arxiv
           </a>
@@ -574,7 +597,8 @@
           <p class="mb-1">Federico Monti<font color="#899499">*</font>, <strong>Davide Boscaini</strong><font color="#899499">*</font>, Jonathan Masci, Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein 
             &emsp; <font color="#899499">(* denotes equal contibution)</font></p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017
-              &mdash; <font color="#a21a2a">Oral presentation (0.8% acceptance rate)</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation (0.8% acceptance rate)</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
           </a>
@@ -616,7 +640,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Emanuele Rodolà, Michael M. Bronstein, Daniel Cremers</p>
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2016
-            &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2016</font>
+          </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://drive.google.com/file/d/16xwzZCNSs2KwO78horEVBAjhfQWR2vio/view?usp=sharing">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
           </a>
@@ -633,7 +658,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Jonathan Masci, Simone Melzi, Michael M. Bronstein, Umberto Castellani, Pierre Vandergheynst</p>
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
-            &mdash; <font color="#a21a2a">Oral presentation at SGP 2015</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation at SGP 2015</font>
+          </p>
         </li>
 
         <!-- ICCV-W 2015 -->
@@ -647,7 +673,8 @@
           <p class="mb-1">Jonathan Masci<font color="#899499">*</font>, <strong>Davide Boscaini</strong><font color="#899499">*</font>, Michael M. Bronstein, Pierre Vandergheynst
             &emsp; <font color="#899499">(* denotes equal contibution)</font></p>
           <p class="mb-1"><i>ICCV Workshop on 3D Representation and Recognition (3dRR)</i>, 2015
-            &mdash; <font color="#a21a2a">Oral presentation</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation</font>
+          </p>
         </li>
 
         <!-- EG 2015 -->
@@ -660,7 +687,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Davide Eynard, Drosos Kourounis, Michael M. Bronstein</p>
           <p class="mb-1"><i>Computer Graphics Forum (CGF)</i>, 2015
-            &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation at Eurographics 2015</font>
+          </p>
         </li>
 
         <!-- 3DOR 2014 -->
@@ -673,7 +701,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Ramunas Girdziusaz, Michael M. Bronstein</p>
           <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2014
-            &mdash; <font color="#a21a2a">Oral presentation</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation</font>
+          </p>
         </li>
 
         <!-- TVC 2014 -->
@@ -698,7 +727,8 @@
           </div>
           <p class="mb-1"><strong>Davide Boscaini</strong>, Umberto Castellani</p>
           <p class="mb-1"><i>Eurographics Workshop on 3D Object Retrieval (3DOR)</i>, 2013
-            &mdash; <font color="#a21a2a">Oral presentation</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation</font>
+          </p>
         </li>
 
       </ul>
