Updated news and publications

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               </td>
               <td>
                 <p class="fs-5">
-                  🎉 I obtained the "Abilitazione Scientifica Nazionale" as Associate Professor in the "01/B1 Informatics" sector.
+                  🎉 Happy to share that I've obtained the National Italian Habilitation (Abilitazione Scientifica Nazionale) as Associate Professor in Informatics (01/B1).
                 </p>
               </td>
             </tr>
