--- a/publications.html
+++ b/publications.html
@@ -142,7 +142,7 @@
             </div>
             <p class="mb-1">Jaime Corsetti, Francesco Giuliari, Alice Fasoli, <strong>Davide Boscaini</strong>, Fabio Poiesi</p>
             <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2025
-              &mdash; <font color="#a21a2a">Highlight poster (~3% acceptance rate)</font></p>
+              &mdash; <font color="#a21a2a">Highlight poster (top 3%)</font></p>
             <p class="mb-1" style="color:#899499">
               &#128227; Invited for presentation at the the 4th OpenSUN3D workshop, held in conjuction with CVPR 2025
             </p>
@@ -233,7 +233,7 @@
           </div>
           <p class="mb-1">Jaime Corsetti, <strong>Davide Boscaini</strong>, Changjae Oh, Andrea Cavallaro, Fabio Poiesi</p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2024
-            &mdash; <font color="#a21a2a">Highlight poster (2.8% acceptance rate)</font>
+            &mdash; <font color="#a21a2a">Highlight poster (top 2.8%)</font>
           </p>
           <!-- <p class="mb-1" style="color:#899499">
             &#128293; An enhanced version of this work, Horyon, is now available as technical report at 
@@ -424,7 +424,7 @@
           </div>
           <p class="mb-1">Antonio Alliegro, <strong>Davide Boscaini</strong>, Tatiana Tommasi</p>
           <p class="mb-1"><i>International Conference on Pattern Recognition (ICPR)</i>, 2020
-            &mdash; <font color="#a21a2a">Oral presentation (4.4% acceptance rate)</font></p>
+            &mdash; <font color="#a21a2a">Oral presentation (top 4.4%)</font></p>
         </li>
 
         <!-- ICPR 2020 -->
@@ -597,7 +597,7 @@
           <p class="mb-1">Federico Monti<font color="#899499">*</font>, <strong>Davide Boscaini</strong><font color="#899499">*</font>, Jonathan Masci, Emanuele Rodolà, Jan Svoboda, Michael M. Bronstein 
             &emsp; <font color="#899499">(* denotes equal contibution)</font></p>
           <p class="mb-1"><i>Computer Vision and Pattern Recognition (CVPR)</i>, 2017
-            &mdash; <font color="#a21a2a">Oral presentation (0.8% acceptance rate)</font>
+            &mdash; <font color="#a21a2a">Oral presentation (top 0.8%)</font>
           </p>
           <a class="btn btn-outline-dark btn-sm" style="margin-top:3px" href="https://drive.google.com/file/d/1my9DIHRgwcBtz6edjRYrWYX65FW16xR3/view?usp=sharing">
             <i class="fa fa-file-pdf-o" aria-hidden="true"></i>&nbsp;&nbsp;pdf
