--- a/index.html
+++ b/index.html
@@ -112,6 +112,19 @@
             <tr>
               <td style="width:20%">
                 <p class="fs-5">
+                  OCt., 2025
+                </p>
+              </td>
+              <td>
+                <p class="fs-5">
+                  📖 Our paper <a href="https://arxiv.org/abs/2406.16384" style="color:black">Horyon</a> has been accepted for publication in TPAMI.
+                </p>
+              </td>
+            </tr>
+
+            <tr>
+              <td style="width:20%">
+                <p class="fs-5">
                   Sep. 15-19, 2025
                 </p>
               </td>
